--- a/requirements-pytorch.txt
+++ b/requirements-pytorch.txt
@@ -1,3 +1,6 @@
+# Cytologick - PyTorch Framework Requirements
+# Install with: pip install -r requirements-pytorch.txt
+
 # Core dependencies
 matplotlib==3.6.2
 opencv-python==4.6.0.66
@@ -16,24 +19,12 @@ pillow>=9.0.0
 h5py>=3.0.0
 PyYAML>=6.0
 
-# TensorFlow framework (default)
-tensorflow>=2.15.0
-keras>=2.15.0
-segmentation-models==1.0.1
-
-# PyTorch framework (alternative)
+# PyTorch framework
 torch>=2.0.0
 torchvision>=0.15.0
 torchaudio>=2.0.0
 segmentation-models-pytorch>=0.3.0
 albumentations>=1.3.0
-
-# Framework-specific dependencies
 efficientnet-pytorch==0.7.1
 pretrainedmodels==0.7.4
 timm==0.9.2
-
-# Testing dependencies (optional)
-pytest>=7.0.0
-pytest-mock>=3.10.0
-pytest-cov>=4.0.0
