Enhances UI and improves pathology map processing
Improves the user interface with a confidence threshold slider and cloud status indicator.

Refactors pathology map processing to support probability maps for lesion confidence calculation in PyTorch.
Adds configurable threshold for lesion detection.

Updates dependencies and provides QSS theming support.
Adds remote endpoint reachability checks.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ openslide-python==1.2.0
 pandas==1.5.2
 PyQt5==5.15.10
 qt-material==2.14
+qdarkstyle>=3.1
 scipy==1.13.0
 tqdm==4.66.2
 multiprocess==0.70.16
