Improves development workflow with pre-commit hooks
Adds pre-commit hooks for code formatting (black), linting (ruff), and general checks.

Updates the contributing guidelines to include instructions for setting up the development environment, running linters, and tests.

--- a/pytest.ini
+++ b/pytest.ini
@@ -40,3 +40,4 @@ filterwarnings =
     ignore::PendingDeprecationWarning
     ignore::UserWarning:torch.*
     ignore::UserWarning:torchvision.*
+    ignore:Type google\._upb\._message\..*:DeprecationWarning
