--- a/requirements-tensorflow.txt
+++ b/requirements-tensorflow.txt
@@ -1,26 +1,23 @@
-# Cytologick - TensorFlow Framework Requirements
+# ============================================================
+# DEPRECATED - TensorFlow support is no longer maintained
+# ============================================================
+# PyTorch is now the recommended framework for Cytologick.
+# Use requirements-pytorch.txt instead.
+#
+# This file is kept for legacy compatibility only.
+# TensorFlow code paths may be removed in future versions.
+# ============================================================
+
 # Install with: pip install -r requirements-tensorflow.txt
 
-# Core dependencies
-matplotlib==3.6.2
-opencv-python==4.6.0.66
-openslide-python==1.2.0
-pandas==1.5.2
-PyQt5==5.15.10
-qt-material==2.14
-qdarkstyle>=3.1
-scipy==1.13.0
-tqdm==4.66.2
-multiprocess==0.70.16
-orjson==3.10.0
-Flask==3.0.3
-scikit-image>=0.23.0
-numpy>=1.26.0,<2.0.0
-pillow>=9.0.0
-h5py>=3.0.0
-PyYAML>=6.0
+# ---------------------------------
+# Base dependencies
+# ---------------------------------
+-r requirements.txt
 
-# TensorFlow framework
+# ---------------------------------
+# TensorFlow (DEPRECATED)
+# ---------------------------------
 tensorflow>=2.15.0
 keras>=2.15.0
 segmentation-models==1.0.1
