--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 # Pytest configuration for Cytologick PyTorch testing
 
 # Test discovery
@@ -11,7 +11,6 @@ python_functions = test_*
 markers =
     pytorch: PyTorch-specific tests
     tensorflow: TensorFlow-specific tests
-    gui: GUI integration tests
     slow: Slow-running tests
     integration: Integration tests
 
@@ -21,15 +20,7 @@ addopts =
     --tb=short
     --strict-markers
     --disable-warnings
-    --cov=clogic
-    --cov-report=html
-    --cov-report=term-missing
 
-# Minimum coverage requirement
-cov-fail-under = 70
-
-# Test timeout (for long-running tests)
-timeout = 300
 
 # Parallel testing
 # addopts = -n auto  # Uncomment for parallel testing with pytest-xdist
