feat(parser): drop tiny pathology masks
Adds configurable minimum pathology pixel threshold to discard tiny mask fragments after rasterization.

Propagates the new setting through configuration and parsing logic, removes small connected abnormal components from masks, and filters pathology records whose mask area falls below the threshold. This reduces noisy/insignificant mask artifacts that can interfere with downstream cropping and tile extraction.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -99,6 +99,8 @@ dataset:
   debug: false
   # Pad each rect with a white border (pixels) before cropping.
   rect_border_padding: 25
+  # Drop tiny pathology mask fragments (pixels) after rasterization.
+  min_pathology_pixels: 10
   # If individual crop fails, force extraction by masking intruders.
   force_extraction: true
   # Centered-crop algorithm:
