feat(gui): async fast overlay rendering
Adds asynchronous fast overlay rendering and smooth inference to improve interactive responsiveness when adjusting confidence slider and running analysis.

- Introduces a lightweight fast renderer used for slider updates to avoid expensive contour/stats recomputation, improving UI responsiveness.
- Implements background rendering (threaded/QtConcurrent) and caching so overlays re-render asynchronously while preventing overlapping jobs and preserving latest slider state.
- Extends inference with an optional smooth windowing mode (overlapping tiles + spline blending) for higher-quality probability maps.
- Enhances detection processing to include multi-threshold coloring (green/yellow/red), label drawing, and refined masking rules for correct overlay stacking.
- Integrates concurrent Qt component into build to support background tasks and updates GUI controls and slider behavior for a better UX.

Improves interactivity and quality of visualizations during analysis and tuning.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
 # Find required packages
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Concurrent)
 find_package(OpenCV REQUIRED)
 find_package(yaml-cpp REQUIRED)
 
@@ -103,6 +103,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Widgets
+    Qt6::Concurrent
     ${OpenCV_LIBS}
     onnxruntime::onnxruntime
     ${YAML_CPP_TARGET}
@@ -121,6 +122,7 @@ if(WIN32)
             $<TARGET_FILE:Qt6::Core>
             $<TARGET_FILE:Qt6::Gui>
             $<TARGET_FILE:Qt6::Widgets>
+            $<TARGET_FILE:Qt6::Concurrent>
             $<TARGET_FILE_DIR:${PROJECT_NAME}>
     )
 endif()
