feat(annotator): add annotator UI & build support
Adds a standalone annotator application and integrates it into the build/CI pipeline.

Provides a full Qt-based annotation UI (slide selector, viewport-based rendering, overview map,
rect/polygon tools, list, save/load JSON) and supporting components (menu, image label, overview).
Exposes optional label list from config YAML for annotator presets and prefers slide-adjacent JSON
when exporting/parsing datasets.

Updates build scripts and packaging to produce and bundle the annotator executable, and expands
.gitignore for annotator artifacts.

Improves workflow for creating and persisting annotations and enables an editor-focused tool for
manual annotation and dataset exports.

--- a/.github/workflows/build-cpp.yml
+++ b/.github/workflows/build-cpp.yml
@@ -39,6 +39,7 @@ jobs:
           cd cpp/build
           mkdir -p dist/_main
           cp Cytologick dist/
+          cp CytologickAnnotator dist/
 
           # Create default config
           cat > dist/config.yaml << 'EOF'
@@ -154,6 +155,7 @@ jobs:
           cd cpp/build
           mkdir -p dist/lib dist/_main
           cp Cytologick dist/
+          cp CytologickAnnotator dist/
 
           # Copy ONNX Runtime library
           cp /opt/onnxruntime/lib/libonnxruntime.so* dist/lib/
@@ -319,6 +321,7 @@ jobs:
           mkdir dist
           mkdir dist\_main
           copy Release\Cytologick.exe dist\
+          copy Release\CytologickAnnotator.exe dist\
           # Bundle VC++ Redistributable installer
           copy ..\..\vc_redist.x64.exe dist\
 
