feat(annotator): add annotation IO and XML merge
Adds a dedicated annotation I/O layer to centralize loading/saving and parsing logic for the annotator.
Introduces a shared annotation type, JSON load/save routines, and merging of ASAP XML with deduplication.
Refactors the UI to use the new I/O APIs, improve error reporting, and keep the annotation list synchronized.

This enables importing legacy XML annotations safely and simplifies future annotation format handling.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -118,6 +118,7 @@ set(ANNOTATOR_SOURCES
     src/annotator/main.cpp
     src/config.cpp
     src/slidereader.cpp
+    src/annotator/annotation_io.cpp
     src/annotator/window.cpp
     src/annotator/menuwindow.cpp
 )
@@ -125,6 +126,8 @@ set(ANNOTATOR_SOURCES
 set(ANNOTATOR_HEADERS
     src/config.h
     src/slidereader.h
+    src/annotator/annotation_io.h
+    src/annotator/annotation_types.h
     src/annotator/window.h
     src/annotator/menuwindow.h
 )
