feat(annotator): update gitignore and add asset
Updates ignored paths to include build/dist/model/temp artifacts and annotation exports, and cleans up ignore entries to better suit the annotator workflow.

Adds an example annotator image asset to support UI/visual testing for the annotator feature.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ ai/
 .DS_Store
 __web/static/temp/
 openslide/
-*.png
 *.bmp
 *slide-*
 dist/
@@ -47,3 +46,5 @@ cpp/build-annotator/.qt/
 
 # Annotation exports (saved next to slides when slides live in-repo)
 current/**/*.json
+
+gui_map.png
