feat(annotator): add working dir selection
Adds a user-selectable working folder for slide discovery and remembers the choice across launches.

Introduces a small preferences backend to persist and restore the working directory, wires a "Select Working Folder" action into both main and annotator UIs, and applies the remembered folder at startup to seed slide selection. Updates build files to include the new module.

This improves workflow by avoiding repeated navigation to the same slide folder and ensures a consistent working context between sessions.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -63,6 +63,7 @@ endif()
 set(SOURCES
     src/main.cpp
     src/config.cpp
+    src/workingdir_prefs.cpp
     src/slidereader.cpp
     src/inference.cpp
     src/graphics.cpp
@@ -73,6 +74,7 @@ set(SOURCES
 
 set(HEADERS
     src/config.h
+    src/workingdir_prefs.h
     src/slidereader.h
     src/inference.h
     src/graphics.h
@@ -117,6 +119,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 set(ANNOTATOR_SOURCES
     src/annotator/main.cpp
     src/config.cpp
+    src/workingdir_prefs.cpp
     src/slidereader.cpp
     src/annotator/annotation_io.cpp
     src/annotator/window.cpp
@@ -125,6 +128,7 @@ set(ANNOTATOR_SOURCES
 
 set(ANNOTATOR_HEADERS
     src/config.h
+    src/workingdir_prefs.h
     src/slidereader.h
     src/annotator/annotation_io.h
     src/annotator/annotation_types.h
