feat(annotator): add overlay rendering & UI
Adds an annotation rendering system and integrates annotation IO and UI controls so users can load, view, and interact with slide markup.

Provides:
- Deterministic class color generation and label layout to render polygon/rect annotations with minimized overlap.
- Overview map rect overlays and synchronized loading of annotations from JSON/XML sources.
- Preview pane support to display reference markup with a toggle, plus inference overlay composition.
- Improved image interactions: right-button panning, refined left-button selection handling, and enhanced center/status updates.

Enables visual review and navigation of annotations and prepares groundwork for further annotator features.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -67,6 +67,8 @@ set(SOURCES
     src/slidereader.cpp
     src/inference.cpp
     src/graphics.cpp
+    src/annotation_overlay.cpp
+    src/annotator/annotation_io.cpp
     src/mainwindow.cpp
     src/menuwindow.cpp
     src/previewwindow.cpp
@@ -78,6 +80,9 @@ set(HEADERS
     src/slidereader.h
     src/inference.h
     src/graphics.h
+    src/annotation_overlay.h
+    src/annotator/annotation_io.h
+    src/annotator/annotation_types.h
     src/mainwindow.h
     src/menuwindow.h
     src/previewwindow.h
